<resources>
    <string name="app_name">IQX</string>
    <string name="pick_date">Pick Date</string>
    <string name="question">Quesion</string>
    <string name="iq_test">IQ Test</string>
    <string name="intro">An intelligence quotient is a total score derived from several standardized tests designed to assess human intelligence.</string>
    <string name="your_name">Your Name</string>
    <string name="your_birth_date">Your Birth Date</string>
    <string name="lets_start_the_quiz">Lets Start The Quiz</string>
    <string name="qOne">#1) Which one of the five is least like the other four?</string>
    <string name="dog">Dog</string>
    <string name="mouse">Mouse</string>
    <string name="lion">Lion</string>
    <string name="snake">Snake</string>
    <string name="elephant">Elephant</string>
    <string name="qTwo">#2) Which number should come next in the series?  \n\t 1 - 1 - 2 - 3 - 5 - 8 - 13</string>
    <string name="_8">8</string>
    <string name="_13">13</string>
    <string name="_21">21</string>
    <string name="_26">26</string>
    <string name="_31">31</string>
    <string name="qThree">#3) Which one of the five choices makes the best comparison? \tPEACH is to HCAEP as 46251 is to:</string>
    <string name="_25641">25641</string>
    <string name="_26451">26451</string>
    <string name="_12654">12654</string>
    <string name="_51462">51462</string>
    <string name="_15264">15264</string>
    <string name="qFour">#4) How many four-sided figures appear in the diagram below?</string>
    <string name="_10">10</string>
    <string name="_16">16</string>
    <string name="_22">22</string>
    <string name="_25">25</string>
    <string name="_28">28</string>
    <string name="qFive">#5) Which of the figures below the line of drawings best completes the series?</string>
    <string name="introimg">introImg</string>
    <string name="submit">Submit</string>
    <string name="numberone">numberOne</string>
    <string name="two">two</string>
    <string name="submit_to_see_you_result">Submit To See You Result</string>
    <string name="_3shan_ibrahim_ymkn_yfhm_d">3shan 'Ebrahim ymkn yfhm :D</string>
</resources>
